# FASTA_Pretty_Print

./: CMakeLists.txt  README.md
src/: main.cpp
